@@ -53,6 +53,10 @@ https://github.com/networkupstools/nut/milestone/10
      activity was completed by the hardware, which led to mis-processing of
      shutdown triggers. Also, notification was added to report "finished
      calibration". [issue #2168, PR #2169]
+   * Drivers running with non-default user account (e.g. with `user=root`
+     in their configuration) failed to apply group ownership and permissions
+     to their Unix socket file for interaction with the local data server.
+     [#2185, #2096]
 
  - nut-usbinfo.pl, nut-scanner and libnutscan:
    * USB VendorID:ProductID support list files generated by the script for
